sandbox/output
OneHundredDoorsTest.java:13: error: cannot find symbol
        assertEquals("O", oneHundredDoors.afterLastPassStatesOfAllDoorsWhoseAmountIs(1));
                                         ^
  symbol:   method afterLastPassStatesOfAllDoorsWhoseAmountIs(int)
  location: variable oneHundredDoors of type OneHundredDoors
1 error
